# family-menu-ha

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  repository.yaml
family-menu/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  run.sh
frontend/: README.md  angular.json  package.json
scripts/: verify_release_image.py
specs/: api-data-model.md  delivery-roadmap.md  deployment-packaging.md  plan-add-meal-catalog-create.md  plan-angular-material-refactor.md  plan-catalog-edit-actions-variations.md  plan-catalog-label-filter.md  plan-catalog-weekly-density-tweaks.md  plan-compact-layout-pass.md  plan-dark-mode-default.md  plan-grocery-omissions.md  plan-grocery-prep-week-navigation.md  plan-home-assistant-addon.md  plan-home-assistant-changelog-readonly-catalog.md  plan-home-assistant-ingress-path.md  plan-import-export-restore.md  plan-initial-webapp.md  plan-meal-catalog-grocery-prep-editing.md  plan-mobile-catalog-create-draft.md  plan-privacy-generic-config.md  plan-randomized-regeneration.md  plan-release-image-race.md  plan-remember-viewed-weeks.md  plan-source-derived-ingredient-amounts.md  plan-vacation-mode.md  plan-variation-add-color-dialog.md  plan-variation-colors-ingredient-amounts.md  plan-week-navigation.md  plan-weekly-alignment-tweaks.md  plan-weekly-instructions-links-labels.md  product-requirements.md  recommendation-engine.md  screen-grocery-prep.md  screen-history.md  screen-meal-catalog.md  screen-settings.md  screen-weekly-plan.md  starter-meal-catalog.json  (+4 more)
(+53 files in other folders)
